# chat2graph

./: .env.template  .gitignore  GEMINI.md  Home.md  Installation.md  README.md  _Sidebar.md  chat2graph_model.py  doc_test.py  gaia_agents.yml  load_chat2graph.py  pyproject.toml  run_gaia_test.py  start.sh  test_graph_store.py  test_playwright_mcp.py  ui.json  代码框架修改.md
.github/: pull_request_template.md
Architecture/: Module-Agent.md  Module-Reasoner.md  Overview.md
Code-Analysis/: Highlights.md  Issues-and-Suggestions.md
Testing/: Guide.md
app/: agentic_service.py  main.py  system_env.py
chat2graph-web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
config/: chat2graph_sqilte_config.py
doc/: feat-216-memfuse-integration-old-overview.md  feat-memfuse-integration-overview.md  index-cn.md  index.md
example/: run_agentic_async_service.py  run_agentic_service.py  run_agentic_sync_service.py  run_data_import.py  run_data_import2.py  run_data_importation.py  run_data_importation_2.py  run_eval_operator.py  run_function_calling.py  run_graph_analysis.py  run_graph_model.py  run_graph_modeling.py  run_graph_query.py  run_job_decomposition.py  run_model_service.py  run_mono_reasoner_with_func_calling.py  run_operator.py  run_question_answering.py  run_reasoner.py  run_reasoner_with_func_calling.py  run_reasoner_without_func_calling.py  run_single_agent.py  run_task_decomposition.py  run_toolkit.py  run_tugraph.py  run_workflow.py
examples/: 01_quickstart.py  02_async_quickstart.py  agentic_text2gql_example.py
instance/: chat2graph.db
(+684 files in other folders)
